--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-09-13  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for 2.8.0
+
+	* configure.in:
+	Bump version to 2.8.0
+	Require eel 2.8.0
+
 2004-09-11  Abel Cheung  <maddog@linuxhall.org>
 
 	* configure.in: Added "ta" to ALL_LINGUAS.
@@ -12,6 +21,8 @@
 
 	* libnautilus-private/nautilus-metafile.c (remove_file_metadata):
 	Destroy the changes hash table in the right way (#48299)
+
+=== nautilus 2.7.92 ===
 
 2004-08-30  Alexander Larsson  <alexl@redhat.com>
 
