--- a/po/cs.po
+++ b/po/cs.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-05 12:14+0200\n"
+"POT-Creation-Date: 2004-09-13 10:55+0200\n"
 "PO-Revision-Date: 2004-09-05 16:24+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
@@ -4957,15 +4957,23 @@ msgid ""
 "We have also seen this error when a faulty version of bonobo-activation was "
 "installed."
 msgstr ""
-"Nyní nelze Nautilus použít. Problém možná vyřešíte spuštěním příkazu \"bonobo-slay\" z konzoly. Pokud ne, můžete zkusit restartovat počítač nebo znovu nainstalovat Nautilus.\n"
+"Nyní nelze Nautilus použít. Problém možná vyřešíte spuštěním příkazu "
+"\"bonobo-slay\" z konzoly. Pokud ne, můžete zkusit restartovat počítač nebo "
+"znovu nainstalovat Nautilus.\n"
 "\n"
-"Bonobo nemohl nalézt soubor Nautilus_shell.server. Zdá se, že jedna z příčin je LD_LIBRARY_PATH, která neobsahuje adresář knihoven bonobo-activation. Jiná možná příčina je špatná instalace, ve které chybí soubor Nautilus_Shell.server.\n"
+"Bonobo nemohl nalézt soubor Nautilus_shell.server. Zdá se, že jedna z příčin "
+"je LD_LIBRARY_PATH, která neobsahuje adresář knihoven bonobo-activation. "
+"Jiná možná příčina je špatná instalace, ve které chybí soubor Nautilus_Shell."
+"server.\n"
 "\n"
-"Spuštění \"bonobo-slay\" zabije všechny procesy Bonobo Activation a GConf, které mohou být potřebné pro jiné aplikace.\n"
+"Spuštění \"bonobo-slay\" zabije všechny procesy Bonobo Activation a GConf, "
+"které mohou být potřebné pro jiné aplikace.\n"
 "\n"
-"Někdy problém vyřeší zabití bonobo-activation-server a gconfd, ale nevíme proč.\n"
+"Někdy problém vyřeší zabití bonobo-activation-server a gconfd, ale nevíme "
+"proč.\n"
 "\n"
-"Také jsme tuto chybu viděli, když byla nainstalována vadná verze bonobo-activation."
+"Také jsme tuto chybu viděli, když byla nainstalována vadná verze bonobo-"
+"activation."
 
 #. Some misc. error (can never happen with current
 #. * version of bonobo-activation). Show dialog and terminate the
