--- a/po/nn.po
+++ b/po/nn.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-31 12:25+0000\n"
+"POT-Creation-Date: 2004-09-13 10:55+0200\n"
 "PO-Revision-Date: 2004-08-31 12:37+0000\n"
 "Last-Translator: Åsmund Skjæveland <aasmunds@fys.uio.no>\n"
 "Language-Team: Norwegian Nynorsk <i18n-nn@lister.ping.uio.no>\n"
@@ -952,7 +952,8 @@ msgstr "Dette er standarddrakta til Nautilus."
 
 #: icons/gnome/gnome.xml.h:1
 msgid "A theme designed to fit well with the classic GNOME environment."
-msgstr "Ei drakt som er utforma til å passa godt inn i det klassiske GNOME-miljøet."
+msgstr ""
+"Ei drakt som er utforma til å passa godt inn i det klassiske GNOME-miljøet."
 
 #: icons/sierra/sierra.xml.h:1
 msgid "Sierra"
@@ -1249,7 +1250,8 @@ msgstr "Bruk «spesielle» flagg i brukarvala for filer"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:29
 msgid "Enables the classic Nautilus behavior, where all windows are browsers"
-msgstr "Brukar den klassiske Nautilus-åtferda, der alle vindauga er nettlesarar"
+msgstr ""
+"Brukar den klassiske Nautilus-åtferda, der alle vindauga er nettlesarar"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:30
 msgid ""
@@ -1296,7 +1298,8 @@ msgstr ""
 "Elles vil framsyninga visa både filer og mapper."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
-msgid "If set to true, newly opened windows will have the location bar visible."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
 msgstr "Dersom sann, vil nyopna vindauge ha adresselinja synleg."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
@@ -1309,7 +1312,8 @@ msgstr "Dersom sann, vil nyopna vindauge ha statuslinja synleg."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
 msgid "If set to true, newly opened windows will have toolbars visible."
-msgstr "Dersom denne er satt til sann, vil nyopna vindauge ha synlege verktøylinjer."
+msgstr ""
+"Dersom denne er satt til sann, vil nyopna vindauge ha synlege verktøylinjer."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:40
 msgid ""
@@ -1412,19 +1416,23 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the home folder will be put on "
 "the desktop."
-msgstr "Dersom sann, vil eit ikon med lenkje til heimemappa setjast på skrivebordet."
+msgstr ""
+"Dersom sann, vil eit ikon med lenkje til heimemappa setjast på skrivebordet."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:53
 msgid ""
 "If this is set to true, an icon linking to the trash will be put on the "
 "desktop."
-msgstr "Dersom sann, vil eit ikon med lenkje til papirkorga setjast på skrivebordet."
+msgstr ""
+"Dersom sann, vil eit ikon med lenkje til papirkorga setjast på skrivebordet."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:54
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
-msgstr "Dersom sann, vil ikon med lenkjer til monterte datalager setjast på skrivebordet."
+msgstr ""
+"Dersom sann, vil ikon med lenkjer til monterte datalager setjast på "
+"skrivebordet."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid ""
@@ -1453,8 +1461,10 @@ msgid "If true, icons will be laid out tighter by default in new windows."
 msgstr "Dersom sann, vert ikon plassert tettare i nye vindauge."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
-msgid "If true, labels will be placed beside icons rather than underneath them."
-msgstr "Dersom sann, vert merkelappar plassert attmed ikona i staden for under."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
+msgstr ""
+"Dersom sann, vert merkelappar plassert attmed ikona i staden for under."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
 msgid "If true, new windows will use manual layout by default."
@@ -1627,7 +1637,8 @@ msgstr "Skildring av skrifttypen som vert brukt til ikona på skrivebordet."
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr "Formatet på fildatoar. Moglege verdiar er «locale», «iso» og «informal»."
+msgstr ""
+"Formatet på fildatoar. Moglege verdiar er «locale», «iso» og «informal»."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid "The side pane view to show in newly opened windows."
@@ -1637,7 +1648,9 @@ msgstr "Sidestolpevisinga som skal brukast i nye vindauge."
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
-msgstr "Dette namnet kan setjast dersom du vil ha eit sjølvvald namn på datamaskinikonet på skrivebordet."
+msgstr ""
+"Dette namnet kan setjast dersom du vil ha eit sjølvvald namn på "
+"datamaskinikonet på skrivebordet."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -1716,7 +1729,8 @@ msgstr "Om det er sjølvvald bakgrunn i sidestolpen."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:103
 msgid "Whether to ask for confirmation when moving files to trash"
-msgstr "Om det skal spørjast etter stadfesting når filer vert flytta til papirkorga."
+msgstr ""
+"Om det skal spørjast etter stadfesting når filer vert flytta til papirkorga."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:104
 msgid "Whether to enable immediate deletion"
@@ -1914,7 +1928,8 @@ msgid "Couldn't Install Emblem"
 msgstr "Klarte ikkje leggja inn merket"
 
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr "Nøkkelord for merke kan berre innehalda bokstavar, tal og mellomrom."
 
 #. this really should never happen, as a user has no idea
@@ -2436,7 +2451,9 @@ msgstr "Fila %s finst frå før. Vil du skriva over henne?"
 msgid ""
 "If you replace the existing folder, any files in it that conflicts with the "
 "files being copied will be overwritten."
-msgstr "Dersom du prøver å byta ut ei mappe som finst frå før, vil alle filer i denne mappa som heiter det same som ei fil i den nye mappa verte overskrivne."
+msgstr ""
+"Dersom du prøver å byta ut ei mappe som finst frå før, vil alle filer i "
+"denne mappa som heiter det same som ei fil i den nye mappa verte overskrivne."
 
 #: libnautilus-private/nautilus-file-operations.c:1103
 msgid "If you replace an existing file, its contents will be overwritten."
@@ -3351,7 +3368,8 @@ msgstr "Kan ikkje visa «%s». Klarte ikkje finna verten «%s»."
 
 #: libnautilus-private/nautilus-program-choosing.c:614
 #: src/nautilus-window-manage-views.c:1411
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr "Kontroller stavinga og mellomtenarinnstillingane."
 
 #: libnautilus-private/nautilus-program-choosing.c:619
@@ -3411,7 +3429,8 @@ msgid "This drop target only supports local files."
 msgstr "Dette målet for slepping støttar berre lokale filer."
 
 #: libnautilus-private/nautilus-program-choosing.c:919
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "For å opna ikkje-lokale filer på du fyrst kopiera dei til ei lokal mappe og "
 "så sleppa dei på nytt."
@@ -3533,7 +3552,8 @@ msgstr "Er du sikker på at du vil fjerna «%s» for godt?"
 #: src/file-manager/fm-directory-view.c:858
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] "Er du sikker på at du vil fjerna det sletta elementet for godt?"
 msgstr[1] "Er du sikker på at du vil fjerna dei %d sletta elementa for godt?"
 
@@ -3651,8 +3671,10 @@ msgid "Cannot move items to trash, do you want to delete them immediately?"
 msgstr "Kan ikkje flytta elementa til papirkorga. Vil du sletta dei for godt?"
 
 #: src/file-manager/fm-directory-view.c:3264
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
-msgstr "Kan ikkje flytta somme element til papirkorga. Vil du sletta dei for godt?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
+msgstr ""
+"Kan ikkje flytta somme element til papirkorga. Vil du sletta dei for godt?"
 
 # gmenu/treedel.c:130 gmenu/treedel.c:153
 #: src/file-manager/fm-directory-view.c:3271
@@ -3672,7 +3694,8 @@ msgid ""
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] "Er du sikker på at du vil fjerna det merka elementet frå papirkorga for godt?"
+msgstr[0] ""
+"Er du sikker på at du vil fjerna det merka elementet frå papirkorga for godt?"
 msgstr[1] ""
 "Er du sikker på at du vil fjerna dei %d merka elementa frå papirkorga for "
 "godt?"
@@ -3832,15 +3855,19 @@ msgstr "«%s» vert kopiert dersom du vel «Lim inn filer»"
 
 #: src/file-manager/fm-directory-view.c:5080
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
 msgstr[0] "Det valde elementet vert flytta dersom du vel «Lim inn filer»"
 msgstr[1] "Dei %d valde elementa vert flytta dersom du vel «Lim inn filer»"
 
 #: src/file-manager/fm-directory-view.c:5087
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
 msgstr[0] "Det valde elementet vert kopiert dersom du vel «Lim inn filer»"
 msgstr[1] "Dei %d valde elementa vert kopierte dersom du vel «Lim inn filer»"
 
@@ -4025,7 +4052,8 @@ msgstr "Oppstartar"
 
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "Du har ikkje løyve til å lesa fila «%s»."
 
 #: src/file-manager/fm-error-reporting.c:61
@@ -4048,12 +4076,14 @@ msgstr "Feil under framvising av mappe"
 
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
 msgstr "Namnet «%s» er allereie i bruk i denne mappa. Vel eit anna namn."
 
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr ""
 "Det er ikkje nokon «%s» i denne mappa. Kanskje elementet nett vart flytta "
 "eller sletta?"
@@ -4068,7 +4098,8 @@ msgstr "Du har ikkje løyve til å endra namn på «%s»."
 msgid ""
 "The name \"%s\" is not valid because it contains the character \"/\". Please "
 "use a different name."
-msgstr "Namnet «%s» er ikkje gyldig. Det inneheld teiknet «/». Bruk eit anna namn."
+msgstr ""
+"Namnet «%s» er ikkje gyldig. Det inneheld teiknet «/». Bruk eit anna namn."
 
 #: src/file-manager/fm-error-reporting.c:122
 #, c-format
@@ -4095,7 +4126,8 @@ msgstr "Feil under namnebyte"
 
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "Du har ikkje løyve til å endra gruppa til «%s»."
 
 #: src/file-manager/fm-error-reporting.c:169
@@ -4136,7 +4168,8 @@ msgstr "Feil under endring av eigar"
 
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr "Klarte ikkje å endra løyva til «%s». Disken er skrivebeskytta"
 
 #: src/file-manager/fm-error-reporting.c:242
@@ -4607,8 +4640,10 @@ msgid "Open a new GNOME terminal window"
 msgstr "Opnar eit nytt GNOME-terminalvindauge"
 
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:8
-msgid "Show a window that lets you set your desktop background's pattern or color"
-msgstr "Vis eit vindauge som let deg endra fargen eller mønsteret på skrivebordet."
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
+msgstr ""
+"Vis eit vindauge som let deg endra fargen eller mønsteret på skrivebordet."
 
 #. add the reset background item, possibly disabled
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:9
@@ -4696,7 +4731,8 @@ msgid "Mount the selected volume"
 msgstr "Monter det valde volumet"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:25
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
 "Flytt eller kopier filer som tidlegare har vorte flytta med ein klipp ut "
 "filer- eller ein kopier filer-kommando"
@@ -4736,11 +4772,13 @@ msgstr "Opna med eit _anna program ..."
 # applets/gen_util/printer.c:358
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prepare the selected files to be copied with a Paste Files command"
-msgstr "Gjer del valde filene klare til å kopierast med ein «Lim inn filer»-kommando"
+msgstr ""
+"Gjer del valde filene klare til å kopierast med ein «Lim inn filer»-kommando"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:34
 msgid "Prepare the selected files to be moved with a Paste Files command"
-msgstr "Gjer dei valde filene klare til å flyttast med ein «Lim inn filer»-kommando"
+msgstr ""
+"Gjer dei valde filene klare til å flyttast med ein «Lim inn filer»-kommando"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:35
 msgid "Prot_ect"
@@ -4980,7 +5018,8 @@ msgstr "Lenkje til gamalt skrivebord"
 
 #: src/nautilus-application.c:360
 msgid "A link called \"Link To Old Desktop\" has been created on the desktop."
-msgstr "Ei lenkje som heiter «Lenkje til gamalt skrivebord» er laga på skrivebordet."
+msgstr ""
+"Ei lenkje som heiter «Lenkje til gamalt skrivebord» er laga på skrivebordet."
 
 #: src/nautilus-application.c:361
 msgid ""
@@ -5691,7 +5730,8 @@ msgstr "Er du sikker på at du vil fjerna loggen?"
 # TRN: Feilmeld: Søt vits, men kan ikkje omsetjast.
 #: src/nautilus-navigation-window-menus.c:187
 msgid "If you do, you will be doomed to repeat it."
-msgstr "(Her skulle det stått ein søt vits, men ordspel kan sjeldan setjast om.)"
+msgstr ""
+"(Her skulle det stått ein søt vits, men ordspel kan sjeldan setjast om.)"
 
 #: src/nautilus-navigation-window-menus.c:189
 msgid "Are you sure you want to clear the list of locations you have visited?"
@@ -6522,7 +6562,8 @@ msgstr "Nautilus kan ikkje fastslå filtypen."
 
 #: src/nautilus-window-manage-views.c:1370
 msgid "Nautilus has no installed viewer capable of displaying the file."
-msgstr "Nautilus har ikkje installert nokon framvisarar som kan visa denne filtypen."
+msgstr ""
+"Nautilus har ikkje installert nokon framvisarar som kan visa denne filtypen."
 
 #: src/nautilus-window-manage-views.c:1383
 #, c-format
@@ -6539,7 +6580,8 @@ msgstr "Kontroller mellomtenarinnstillingane."
 msgid ""
 "Couldn't display \"%s\", because Nautilus cannot contact the SMB master "
 "browser."
-msgstr "Klarte ikkje visa «%s», fordi Nautilus ikkje kan kontakta SMB-hovudlesaren."
+msgstr ""
+"Klarte ikkje visa «%s», fordi Nautilus ikkje kan kontakta SMB-hovudlesaren."
 
 #: src/nautilus-window-manage-views.c:1426
 msgid "Check that an SMB server is running in the local network."
@@ -6645,4 +6687,3 @@ msgstr "Nettverkstenarar"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Vis nettverkstenarane dine i Nautilus"
-
