--- a/po/ro.po
+++ b/po/ro.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD.ro\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 16:44+0200\n"
+"POT-Creation-Date: 2004-09-13 10:55+0200\n"
 "PO-Revision-Date: 2004-09-07 23:01+0300\n"
 "Last-Translator: Mugurel Tudor <mugurelu@go.ro>\n"
 "Language-Team: Romanian <gnomero@lists.sourceforge.net>\n"
@@ -1251,7 +1251,8 @@ msgstr ""
 "arbore. În caz contrar, va afişa atât dosarele cât şi fişierele."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
-msgid "If set to true, newly opened windows will have the location bar visible."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 "Dacă este setat la true, noile ferestre deschise vor avea bara de locaţie "
 "vizibilă."
@@ -1308,7 +1309,8 @@ msgstr ""
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
-msgstr "Dacă este setat la true, atunci Nautilus va afişa iconiţele pe desktop."
+msgstr ""
+"Dacă este setat la true, atunci Nautilus va afişa iconiţele pe desktop."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 msgid ""
@@ -1395,8 +1397,8 @@ msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
 msgstr ""
-"Dacă este setat la true, iconiţe ce trimit către volumele montate vor fi puse "
-"pe desktop."
+"Dacă este setat la true, iconiţe ce trimit către volumele montate vor fi "
+"puse pe desktop."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid ""
@@ -1425,8 +1427,10 @@ msgid "If true, icons will be laid out tighter by default in new windows."
 msgstr "Dacă este true, iconiţele vor fi afişate mai strâns în noile ferestre."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
-msgid "If true, labels will be placed beside icons rather than underneath them."
-msgstr "Dacă este true, etichetele vor fi plasate lângă iconiţe, şi nu sub ele."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
+msgstr ""
+"Dacă este true, etichetele vor fi plasate lângă iconiţe, şi nu sub ele."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
 msgid "If true, new windows will use manual layout by default."
@@ -1603,7 +1607,9 @@ msgstr "Descrierea fontului folosit pentru iconiţele de pe desktop."
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr "Formatul datei fişierelor. Valori posibile sunt „locale”, „iso” si „informal”."
+msgstr ""
+"Formatul datei fişierelor. Valori posibile sunt „locale”, „iso” si "
+"„informal”."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid "The side pane view to show in newly opened windows."
@@ -1890,7 +1896,8 @@ msgid "Couldn't Install Emblem"
 msgstr "Nu am putut instala emblema"
 
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Îmi pare rău, dar cuvintele cheie ale emblemelor pot conţine decât litere, "
 "spaţii şi numere."
@@ -2403,11 +2410,14 @@ msgstr "Fişierul „%s“ există deja.  Doriţi să-l înlocuiţi?"
 msgid ""
 "If you replace the existing folder, any files in it that conflicts with the "
 "files being copied will be overwritten."
-msgstr "Dacă înlocuiţi un dosar existent, orice fişier conţinut în acesta şi care este în conflict cu fişierele ce vor fi copiate va fi suprascris."
+msgstr ""
+"Dacă înlocuiţi un dosar existent, orice fişier conţinut în acesta şi care "
+"este în conflict cu fişierele ce vor fi copiate va fi suprascris."
 
 #: libnautilus-private/nautilus-file-operations.c:1103
 msgid "If you replace an existing file, its contents will be overwritten."
-msgstr "Dacă înlocuiţi un fişier existent, conţinutul acestuia va fi suprascris."
+msgstr ""
+"Dacă înlocuiţi un fişier existent, conţinutul acestuia va fi suprascris."
 
 #: libnautilus-private/nautilus-file-operations.c:1116
 #: libnautilus-private/nautilus-file-operations.c:1135
@@ -3287,11 +3297,13 @@ msgstr "Accesul a fost interzis."
 #: src/nautilus-window-manage-views.c:1408
 #, c-format
 msgid "Couldn't display \"%s\", because no host \"%s\" could be found."
-msgstr "N-am putut afişa „%s“, deoarece nici o gazdă „%s“ nu a putut fi găsită."
+msgstr ""
+"N-am putut afişa „%s“, deoarece nici o gazdă „%s“ nu a putut fi găsită."
 
 #: libnautilus-private/nautilus-program-choosing.c:614
 #: src/nautilus-window-manage-views.c:1411
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr "Vă rugăm verificaţi ortografia şi setările proxy."
 
 #: libnautilus-private/nautilus-program-choosing.c:619
@@ -3349,7 +3361,8 @@ msgid "This drop target only supports local files."
 msgstr "Această ţintă suportă doar sisteme de fişiere locale."
 
 #: libnautilus-private/nautilus-program-choosing.c:919
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Pentru a deschide fişiere non-locale copiaţi-le mai întâi într-un dosar "
 "local şi încercaţi din nou."
@@ -3469,9 +3482,12 @@ msgstr "Sunteţi sigur(ă) că doriţi să ştergeţi permanent \"%s\"?"
 #: src/file-manager/fm-directory-view.c:858
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
-msgstr[0] "Sunteţi sigur(ă) că doriţi să ştergeţi permanent %d element selectat?"
-msgstr[1] "Sunteţi sigur(ă) că doriţi să ştergeţi permanent %d elemente selectate?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
+msgstr[0] ""
+"Sunteţi sigur(ă) că doriţi să ştergeţi permanent %d element selectat?"
+msgstr[1] ""
+"Sunteţi sigur(ă) că doriţi să ştergeţi permanent %d elemente selectate?"
 
 #: src/file-manager/fm-directory-view.c:866
 msgid "If you delete an item, it is permanently lost."
@@ -3584,7 +3600,8 @@ msgid "Cannot move items to trash, do you want to delete them immediately?"
 msgstr "Elementele nu pot fi mutate la gunoi. Doriţi să le ştergeţi imediat?"
 
 #: src/file-manager/fm-directory-view.c:3264
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
 msgstr "Elementele nu pot fi mutate la gunoi. Doriţi să le ştergeţi imediat?"
 
 #: src/file-manager/fm-directory-view.c:3271
@@ -3694,7 +3711,8 @@ msgstr "Creaţi document folosind şablonul „%s“"
 
 #: src/file-manager/fm-directory-view.c:4933
 msgid "All executable files in this folder will appear in the Scripts menu."
-msgstr "Toate fişierele executabile din acest dosar vor apare în meniul Scripturi. "
+msgstr ""
+"Toate fişierele executabile din acest dosar vor apare în meniul Scripturi. "
 
 #: src/file-manager/fm-directory-view.c:4935
 msgid ""
@@ -3763,17 +3781,25 @@ msgstr "\"%s\" va fi copiat dacă selectaţi comanda Lipeşte fişiere"
 
 #: src/file-manager/fm-directory-view.c:5080
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
-msgstr[0] "%d element selectat va fi mutat dacă selectaţi comanda Lipeşte fişiere"
-msgstr[1] "%d elemente selectate vor fi mutate dacă selectaţi comanda Lipeşte fişiere"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
+msgstr[0] ""
+"%d element selectat va fi mutat dacă selectaţi comanda Lipeşte fişiere"
+msgstr[1] ""
+"%d elemente selectate vor fi mutate dacă selectaţi comanda Lipeşte fişiere"
 
 #: src/file-manager/fm-directory-view.c:5087
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
-msgstr[0] "%d element selectat va fi copiat dacă selectaţi comanda Lipeşte fişiere"
-msgstr[1] "%d elemente selectate vor fi copiate dacă selectaţi comanda Lipeşte fişiere"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
+msgstr[0] ""
+"%d element selectat va fi copiat dacă selectaţi comanda Lipeşte fişiere"
+msgstr[1] ""
+"%d elemente selectate vor fi copiate dacă selectaţi comanda Lipeşte fişiere"
 
 #: src/file-manager/fm-directory-view.c:5169
 #: src/file-manager/fm-tree-view.c:868
@@ -3909,7 +3935,8 @@ msgstr "Aceată legătură nu poate fi folosită deoarece nu are ţintă."
 #: src/file-manager/fm-directory-view.c:6334
 #, c-format
 msgid "This link can't be used, because its target \"%s\" doesn't exist."
-msgstr "Această legătură nu poate fi folosită deoarece ţinta sa „%s“ nu există."
+msgstr ""
+"Această legătură nu poate fi folosită deoarece ţinta sa „%s“ nu există."
 
 #: src/file-manager/fm-directory-view.c:6339
 msgid "Broken Link"
@@ -3946,7 +3973,8 @@ msgstr "Lansator"
 
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "Nu aveţi drepturile necesare pentru a vizualiza conţinutul lui \"%s\"."
 
 #: src/file-manager/fm-error-reporting.c:61
@@ -3969,12 +3997,15 @@ msgstr "Eroare la afişarea dosarului"
 
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
-msgstr "Numele \"%s\" este deja folosit în acest dosar. Vă rog să alegeţi alt nume."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
+msgstr ""
+"Numele \"%s\" este deja folosit în acest dosar. Vă rog să alegeţi alt nume."
 
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr "\"%s\" nu există în acest dosar. Poate a fost şters sa mutat recent?"
 
 #: src/file-manager/fm-error-reporting.c:113
@@ -3999,7 +4030,8 @@ msgstr "Numele \"%s\" nu este valid. Vă rog alegeţi alt nume."
 #: src/file-manager/fm-error-reporting.c:128
 #, c-format
 msgid "Couldn't change the name of \"%s\" because it is on a read-only disk"
-msgstr "Nu am putut schimba numele lui \"%s\" deoarece este pe disc doar-citire"
+msgstr ""
+"Nu am putut schimba numele lui \"%s\" deoarece este pe disc doar-citire"
 
 #: src/file-manager/fm-error-reporting.c:137
 #, c-format
@@ -4016,13 +4048,15 @@ msgstr "Eroare la renumire"
 
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "Nu aveti permisiunile necesare pentru a schimba grupul lui \"%s\"."
 
 #: src/file-manager/fm-error-reporting.c:169
 #, c-format
 msgid "Couldn't change the group of \"%s\" because it is on a read-only disk"
-msgstr "Nu am putut schimba grupul lui \"%s\" deoarece este pe disc doar-citire"
+msgstr ""
+"Nu am putut schimba grupul lui \"%s\" deoarece este pe disc doar-citire"
 
 #: src/file-manager/fm-error-reporting.c:177
 #, c-format
@@ -4040,7 +4074,8 @@ msgstr "Eroare la setarea grupului"
 #: src/file-manager/fm-error-reporting.c:203
 #, c-format
 msgid "Couldn't change the owner of \"%s\" because it is on a read-only disk"
-msgstr "Nu am putut schimba deţinătorul lui \"%s\" deoarece este pe disc doar-citire"
+msgstr ""
+"Nu am putut schimba deţinătorul lui \"%s\" deoarece este pe disc doar-citire"
 
 #: src/file-manager/fm-error-reporting.c:210
 #, c-format
@@ -4057,8 +4092,10 @@ msgstr "Eroare la setarea deţinătorului"
 
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
-msgstr "Nu am putut schimba drepturile lui \"%s\" deoarece este pe disc doar-citire"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgstr ""
+"Nu am putut schimba drepturile lui \"%s\" deoarece este pe disc doar-citire"
 
 #: src/file-manager/fm-error-reporting.c:242
 #, c-format
@@ -4147,7 +4184,8 @@ msgstr "Tragerea şi plasarea nu este suportată."
 
 #: src/file-manager/fm-icon-view.c:2616
 msgid "Drag and drop is only supported on local file systems."
-msgstr "Tragerea şi plasarea este suportată doar pe sistemele de fişiere locale."
+msgstr ""
+"Tragerea şi plasarea este suportată doar pe sistemele de fişiere locale."
 
 #: src/file-manager/fm-icon-view.c:2617 src/file-manager/fm-icon-view.c:2641
 msgid "Drag and Drop Error"
@@ -4168,7 +4206,8 @@ msgstr "Alegeţi ordinea în care apar informaţiile în acest dosar."
 
 #: src/file-manager/fm-properties-window.c:482
 msgid "You can't assign more than one custom icon at a time!"
-msgstr "Nu puteţi atribui mai mult de o iconiţă personalizată la un moment dat!"
+msgstr ""
+"Nu puteţi atribui mai mult de o iconiţă personalizată la un moment dat!"
 
 #: src/file-manager/fm-properties-window.c:483
 #: src/nautilus-information-panel.c:507
@@ -4510,7 +4549,8 @@ msgid "Open a new GNOME terminal window"
 msgstr "Deschide o nouă fereatră cu terminalul GNOME"
 
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:8
-msgid "Show a window that lets you set your desktop background's pattern or color"
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
 msgstr "Arată o fereastră care vă lasă să setaţi fundalul desktop-ului"
 
 #. add the reset background item, possibly disabled
@@ -4593,8 +4633,10 @@ msgid "Mount the selected volume"
 msgstr "Montează volumul selectat"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:25
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
-msgstr "Mută sau copie fişierele selectate anterior printr-o comandă Taie sau Lipeşte"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
+msgstr ""
+"Mută sau copie fişierele selectate anterior printr-o comandă Taie sau Lipeşte"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:26
 msgid ""
@@ -4676,7 +4718,8 @@ msgstr "Selectează toate elementele din această fereastră"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:44
 msgid "Select items in this window matching a given pattern"
-msgstr "Selectează elementele din această ferestră ce se potrivesc unui anumit model"
+msgstr ""
+"Selectează elementele din această ferestră ce se potrivesc unui anumit model"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:45
 msgid "Show _Hidden Files"
@@ -5391,7 +5434,8 @@ msgstr ""
 
 #: src/nautilus-information-panel.c:506
 msgid "You can't assign more than one custom icon at a time."
-msgstr "Nu puteţi atribui mai mult de o iconiţă personalizată la un moment dat."
+msgstr ""
+"Nu puteţi atribui mai mult de o iconiţă personalizată la un moment dat."
 
 #: src/nautilus-information-panel.c:535
 msgid "You can only use images as custom icons."
@@ -5532,7 +5576,8 @@ msgstr "Panoul lateral %s a avut o eroare şi nu poate continua."
 
 #: src/nautilus-navigation-window.c:1075
 msgid "If this keeps happening, you might want to turn this panel off."
-msgstr "Dacă continuă să se întâmple, poate veţi dori să dezactivaţi acest panou."
+msgstr ""
+"Dacă continuă să se întâmple, poate veţi dori să dezactivaţi acest panou."
 
 #: src/nautilus-navigation-window.c:1078
 msgid "Side Panel Failed"
@@ -6001,7 +6046,8 @@ msgstr "Componentă Nautilus care arată o listă defilabilă"
 msgid ""
 "Nautilus file manager component that shows a scrollable list for search "
 "results"
-msgstr "Componentă Nautilus care arată o listă defilabilă pentru rezulatele căutării"
+msgstr ""
+"Componentă Nautilus care arată o listă defilabilă pentru rezulatele căutării"
 
 #: src/Nautilus_shell.server.in.h:11
 msgid "Nautilus file manager component that shows a two-dimensional icon space"
@@ -6039,7 +6085,8 @@ msgstr "Shell Nautilus"
 msgid ""
 "Nautilus shell operations that can be done from subsequent command-line "
 "invocations"
-msgstr "Operaţii shell Nautilus care pot fi făcute din invocari ale liniei de comandă"
+msgstr ""
+"Operaţii shell Nautilus care pot fi făcute din invocari ale liniei de comandă"
 
 #: src/Nautilus_shell.server.in.h:20
 msgid "Produces metafile objects for accessing Nautilus metadata"
@@ -6469,5 +6516,3 @@ msgstr "Servere reţea"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Vizualizează serverele de reţea în Nautilus"
-
-
