--- a/po/tr.po
+++ b/po/tr.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-09-03 23:06+0300\n"
+"POT-Creation-Date: 2004-09-13 10:55+0200\n"
 "PO-Revision-Date: 2004-09-03 23:21+0300\n"
 "Last-Translator: Baris Cicek <baris@teamforce.name.tr>\n"
 "Language-Team: Turkish <gnome-turk@gnome.org>\n"
@@ -1455,8 +1455,10 @@ msgstr ""
 "halde hem klasörleri hem de dosyaları gösterir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:36
-msgid "If set to true, newly opened windows will have the location bar visible."
-msgstr "Eğer seçiliyse, yeni açılan pencerelerin konum çubukları görünür halde olur."
+msgid ""
+"If set to true, newly opened windows will have the location bar visible."
+msgstr ""
+"Eğer seçiliyse, yeni açılan pencerelerin konum çubukları görünür halde olur."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:37
 msgid "If set to true, newly opened windows will have the side pane visible."
@@ -1464,11 +1466,13 @@ msgstr "Eğer seçiliyse, yeni açılan pencerelerin yan paneli görüntülenece
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:38
 msgid "If set to true, newly opened windows will have the status bar visible."
-msgstr "Eğer seçiliyise, yeni açılan pencerelerin durum çubuğu görüntülenecektir."
+msgstr ""
+"Eğer seçiliyise, yeni açılan pencerelerin durum çubuğu görüntülenecektir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:39
 msgid "If set to true, newly opened windows will have toolbars visible."
-msgstr "Eğer seçiliyse, yeni açılan pencerelerin araç çubuğu görüntülenecektir."
+msgstr ""
+"Eğer seçiliyse, yeni açılan pencerelerin araç çubuğu görüntülenecektir."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:40
 msgid ""
@@ -1564,7 +1568,8 @@ msgstr ""
 msgid ""
 "If this is set to true, an icon linking to the computer location will be put "
 "on the desktop."
-msgstr "Eğer bu seçiliyse, bilgisayar konumuna olan simge bağı masaüstüne konacak."
+msgstr ""
+"Eğer bu seçiliyse, bilgisayar konumuna olan simge bağı masaüstüne konacak."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:52
 msgid ""
@@ -1582,7 +1587,8 @@ msgstr "Eğer bu seçiliyse, çöp'e olan simge bağı masaüstüne konacak."
 msgid ""
 "If this is set to true, icons linking to mounted volumes will be put on the "
 "desktop."
-msgstr "Eğer seçiliyse, bağlanmış sistemlere ait olan simglere masaüstüne konacak."
+msgstr ""
+"Eğer seçiliyse, bağlanmış sistemlere ait olan simglere masaüstüne konacak."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid ""
@@ -1613,12 +1619,15 @@ msgstr ""
 "yerleştirilecek."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:58
-msgid "If true, labels will be placed beside icons rather than underneath them."
-msgstr "Eğer seçiliyse, etiketler simgelerin altına değil üstüne yerleştirilecek."
+msgid ""
+"If true, labels will be placed beside icons rather than underneath them."
+msgstr ""
+"Eğer seçiliyse, etiketler simgelerin altına değil üstüne yerleştirilecek."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:59
 msgid "If true, new windows will use manual layout by default."
-msgstr "Eğer seçiliyse, yeni pencereler öntanımlı olarak elle düzenleme kullanacak."
+msgstr ""
+"Eğer seçiliyse, yeni pencereler öntanımlı olarak elle düzenleme kullanacak."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:60
 msgid ""
@@ -1799,7 +1808,9 @@ msgstr "Masaüstündeki simgelerde kullanılan yazıtipi açıklaması."
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr "Dosya tarihlerinin biçimi. Geçerli değerler \"locale\", \"iso\", ve \"informal\"dır."
+msgstr ""
+"Dosya tarihlerinin biçimi. Geçerli değerler \"locale\", \"iso\", ve "
+"\"informal\"dır."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid "The side pane view to show in newly opened windows."
@@ -2124,7 +2135,8 @@ msgstr "Amblem kurulamadı."
 # src/nautilus-property-browser.c:1420
 #: libnautilus-private/nautilus-emblem-utils.c:198
 msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
-msgstr "Üzgünüm, ancak yeni amblem için boş olmayan bir anahtar kelime girmelisiniz."
+msgstr ""
+"Üzgünüm, ancak yeni amblem için boş olmayan bir anahtar kelime girmelisiniz."
 
 # src/nautilus-property-browser.c:1421 src/nautilus-property-browser.c:1424
 # src/nautilus-property-browser.c:1428 src/nautilus-property-browser.c:1457
@@ -2137,7 +2149,8 @@ msgstr "Amblem Kurulamadı"
 
 # src/nautilus-property-browser.c:1423
 #: libnautilus-private/nautilus-emblem-utils.c:203
-msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid ""
+"Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Üzgünüm, ancak amblem anahtar kelimesi sadece harf, rakam ve boşluk "
 "karakterleri içerebilir."
@@ -2150,7 +2163,8 @@ msgstr ""
 #: libnautilus-private/nautilus-emblem-utils.c:213
 #, c-format
 msgid "Sorry, but there is already an emblem named \"%s\"."
-msgstr "\"%s\" isimli bir amblem zaten bulunuyor. Lütfen farklı bir isim seçin."
+msgstr ""
+"\"%s\" isimli bir amblem zaten bulunuyor. Lütfen farklı bir isim seçin."
 
 #: libnautilus-private/nautilus-emblem-utils.c:214
 msgid "Please choose a different emblem name."
@@ -2424,6 +2438,7 @@ msgstr "bağlantı"
 #. * (e.g. "folder", "plain text") to file type for symbolic link
 #. * to that kind of file (e.g. "link to folder").
 #.
+#. appended to new link file
 #: libnautilus-private/nautilus-file.c:4732
 #: libnautilus-private/nautilus-file-operations.c:1194
 #, c-format
@@ -2529,7 +2544,8 @@ msgstr "Kopyalarken hata oluştu."
 #: libnautilus-private/nautilus-file-operations.c:645
 #, c-format
 msgid "\"%s\" cannot be copied because you do not have permissions to read it."
-msgstr "\"%s\" kopyalanamadı çünkü onu okumak için yeterli erişim hakkınız yok."
+msgstr ""
+"\"%s\" kopyalanamadı çünkü onu okumak için yeterli erişim hakkınız yok."
 
 # libnautilus-private/nautilus-file-operations.c:874
 #: libnautilus-private/nautilus-file-operations.c:665
@@ -2820,6 +2836,9 @@ msgstr " (başka kopya)"
 
 # libnautilus-private/nautilus-file-operations.c:1168
 #. localizers: tag used to detect the x11th copy of a file
+#. localizers: tag used to detect the x12th copy of a file
+#. localizers: tag used to detect the x13th copy of a file
+#. localizers: tag used to detect the xxth copy of a file
 #: libnautilus-private/nautilus-file-operations.c:1252
 #: libnautilus-private/nautilus-file-operations.c:1254
 #: libnautilus-private/nautilus-file-operations.c:1256
@@ -2861,6 +2880,9 @@ msgstr "%s (başka kopya)%s"
 
 # libnautilus-private/nautilus-file-operations.c:1188
 #. localizers: appended to x11th file copy
+#. localizers: appended to x12th file copy
+#. localizers: appended to x13th file copy
+#. localizers: appended to xxth file copy
 #: libnautilus-private/nautilus-file-operations.c:1285
 #: libnautilus-private/nautilus-file-operations.c:1287
 #: libnautilus-private/nautilus-file-operations.c:1289
@@ -3702,6 +3724,7 @@ msgstr "%s açılıyor"
 #. TODO: These strings suck pretty badly, but we're in string-freeze,
 #. * and I found these in other places to reuse. We should make them
 #. * better later.
+#. Shouldn't have gotten this error unless there's a : separator.
 #: libnautilus-private/nautilus-program-choosing.c:591
 #: libnautilus-private/nautilus-program-choosing.c:599
 #: libnautilus-private/nautilus-program-choosing.c:604
@@ -3743,7 +3766,8 @@ msgstr "\"%s\" gösterilemiyor, çünkü \"%s\" makinesi bulunamadı."
 # src/nautilus-window-manage-views.c:1358
 #: libnautilus-private/nautilus-program-choosing.c:614
 #: src/nautilus-window-manage-views.c:1411
-msgid "Check that the spelling is correct and that your proxy settings are correct."
+msgid ""
+"Check that the spelling is correct and that your proxy settings are correct."
 msgstr "Yazım yanlışlarını ve vekil ayarlarınızın doğruluğunu kontrol edin."
 
 # src/nautilus-theme-selector.c:396
@@ -3807,7 +3831,8 @@ msgid "This drop target only supports local files."
 msgstr "Bu bırakma hedefi sadece yerel dosyalar için destekleniyor."
 
 #: libnautilus-private/nautilus-program-choosing.c:919
-msgid "To open non-local files copy them to a local folder and then drop them again."
+msgid ""
+"To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Yerel olmayan dosyaları açmak için, onları yerel bir klasöre kopyalayın daha "
 "sonra tekrar bırakmayı deneyin."
@@ -3951,7 +3976,8 @@ msgstr "\"%s\" dosyasını kalıcı olarak silmek istediğinize emin misiniz?"
 #: src/file-manager/fm-directory-view.c:858
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural "Are you sure you want to permanently delete the %d selected items?"
+msgid_plural ""
+"Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] "%d seçili öğeyi kalıcı olarak silmek istediğinizden emin misiniz?"
 msgstr[1] "%d seçili öğeyi kalıcı olarak silmek istediğinizden emin misiniz?"
 
@@ -4068,7 +4094,8 @@ msgstr "%s%s, %s"
 #: src/file-manager/fm-directory-view.c:1971
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr "\"%s\" klasörü Nautilusun işleyebileceğinden daha fazla dosya içeriyor."
+msgstr ""
+"\"%s\" klasörü Nautilusun işleyebileceğinden daha fazla dosya içeriyor."
 
 #: src/file-manager/fm-directory-view.c:1977
 msgid "Some files will not be displayed."
@@ -4096,8 +4123,10 @@ msgstr "Öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister mis
 
 # src/file-manager/fm-directory-view.c:2591
 #: src/file-manager/fm-directory-view.c:3264
-msgid "Cannot move some items to trash, do you want to delete these immediately?"
-msgstr "Kimi öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister misiniz?"
+msgid ""
+"Cannot move some items to trash, do you want to delete these immediately?"
+msgstr ""
+"Kimi öğeler çöpe taşınamadı, bunları kalıcı olarak silmek ister misiniz?"
 
 # src/file-manager/fm-directory-view.c:2608
 #: src/file-manager/fm-directory-view.c:3271
@@ -4108,7 +4137,8 @@ msgstr "Hemen Sil?"
 #: src/file-manager/fm-directory-view.c:3303
 #, c-format
 msgid "Are you sure you want to permanently delete \"%s\" from the trash?"
-msgstr "\"%s\" dosyasını çöpten kalıcı olarak silmek istediğinize emin misiniz?"
+msgstr ""
+"\"%s\" dosyasını çöpten kalıcı olarak silmek istediğinize emin misiniz?"
 
 # src/file-manager/fm-directory-view.c:2639
 #: src/file-manager/fm-directory-view.c:3307
@@ -4119,8 +4149,10 @@ msgid ""
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] "%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
-msgstr[1] "%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
+msgstr[0] ""
+"%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
+msgstr[1] ""
+"%d seçili öğeyi kalıcı olarak çöpten silmek istediğinizden emin misiniz?"
 
 # src/file-manager/fm-directory-view.c:2643
 #: src/file-manager/fm-directory-view.c:3316
@@ -4216,7 +4248,8 @@ msgstr "\"%s\" şablomundan Belge oluştur"
 
 #: src/file-manager/fm-directory-view.c:4933
 msgid "All executable files in this folder will appear in the Scripts menu."
-msgstr "Bu klasördeki tüm çalıştırılabilir dosyalar Betikler menüsünde görünecek."
+msgstr ""
+"Bu klasördeki tüm çalıştırılabilir dosyalar Betikler menüsünde görünecek."
 
 #: src/file-manager/fm-directory-view.c:4935
 msgid ""
@@ -4285,17 +4318,23 @@ msgstr "Dosyaları Yapıştır komutunu seçerseniz \"%s\" kopyalanacaktır"
 
 #: src/file-manager/fm-directory-view.c:5080
 #, c-format
-msgid "The %d selected item will be moved if you select the Paste Files command"
-msgid_plural "The %d selected items will be moved if you select the Paste Files command"
+msgid ""
+"The %d selected item will be moved if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be moved if you select the Paste Files command"
 msgstr[0] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe taşınacak"
 msgstr[1] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe taşınacak"
 
 #: src/file-manager/fm-directory-view.c:5087
 #, c-format
-msgid "The %d selected item will be copied if you select the Paste Files command"
-msgid_plural "The %d selected items will be copied if you select the Paste Files command"
-msgstr[0] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
-msgstr[1] "Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
+msgid ""
+"The %d selected item will be copied if you select the Paste Files command"
+msgid_plural ""
+"The %d selected items will be copied if you select the Paste Files command"
+msgstr[0] ""
+"Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
+msgstr[1] ""
+"Eğer Dosyaları Yapıştır komutunu seçerseniz %d seçili öğe kopyalanacak"
 
 # src/file-manager/fm-directory-view.c:2596
 #: src/file-manager/fm-directory-view.c:5169
@@ -4508,8 +4547,10 @@ msgstr "Başlatıcı"
 # src/nautilus-window-manage-views.c:657
 #: src/file-manager/fm-error-reporting.c:57
 #, c-format
-msgid "You do not have the permissions necessary to view the contents of \"%s\"."
-msgstr "\"%s\" içeriğine bakmak için gerekli erişim haklarına sahip değilsiniz."
+msgid ""
+"You do not have the permissions necessary to view the contents of \"%s\"."
+msgstr ""
+"\"%s\" içeriğine bakmak için gerekli erişim haklarına sahip değilsiniz."
 
 #: src/file-manager/fm-error-reporting.c:61
 #, c-format
@@ -4535,13 +4576,16 @@ msgstr "Dizin Gösterilmesinde Hata"
 # src/file-manager/fm-error-reporting.c:55
 #: src/file-manager/fm-error-reporting.c:103
 #, c-format
-msgid "The name \"%s\" is already used in this folder. Please use a different name."
-msgstr "\"%s\" adı bu klasörde zaten kullanılıyor. Lütfen başka bir isim kullanın."
+msgid ""
+"The name \"%s\" is already used in this folder. Please use a different name."
+msgstr ""
+"\"%s\" adı bu klasörde zaten kullanılıyor. Lütfen başka bir isim kullanın."
 
 # src/file-manager/fm-error-reporting.c:60
 #: src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgid ""
+"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
 msgstr "Bu klasörde \"%s\" bulunamadı. Silinmiş, ya da taşınmış olabilir mi?"
 
 # src/file-manager/fm-error-reporting.c:65
@@ -4595,8 +4639,10 @@ msgstr "Yeniden Adlandırma Hatası"
 # src/file-manager/fm-error-reporting.c:112
 #: src/file-manager/fm-error-reporting.c:165
 #, c-format
-msgid "You do not have the permissions necessary to change the group of \"%s\"."
-msgstr "\"%s\"nin grubunu değiştirmek için gerekli erişim haklarına sahip değilsiniz."
+msgid ""
+"You do not have the permissions necessary to change the group of \"%s\"."
+msgstr ""
+"\"%s\"nin grubunu değiştirmek için gerekli erişim haklarına sahip değilsiniz."
 
 # src/file-manager/fm-error-reporting.c:116
 #: src/file-manager/fm-error-reporting.c:169
@@ -4645,7 +4691,8 @@ msgstr "Sahibi Değiştirilirken Hata"
 # src/file-manager/fm-error-reporting.c:178
 #: src/file-manager/fm-error-reporting.c:235
 #, c-format
-msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgid ""
+"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
 msgstr ""
 "\"%s\"nin erişim hakları değiştirilemedi çünkü dosya salt okunur disk "
 "üzerinde"
@@ -5031,7 +5078,8 @@ msgstr "_Yapışık"
 # src/file-manager/fm-properties-window.c:1664
 #: src/file-manager/fm-properties-window.c:2938
 msgid "You are not the owner, so you can't change these permissions."
-msgstr "Dosyanın sahibi olmadığınız için bu erişim haklarını değiştiremezsiniz."
+msgstr ""
+"Dosyanın sahibi olmadığınız için bu erişim haklarını değiştiremezsiniz."
 
 # src/file-manager/fm-properties-window.c:1677
 #: src/file-manager/fm-properties-window.c:2952
@@ -5209,7 +5257,8 @@ msgstr "Yeni bir GNOME terminali aç"
 
 # src/file-manager/nautilus-desktop-icon-view-ui.xml.h:10
 #: src/file-manager/nautilus-desktop-icon-view-ui.xml.h:8
-msgid "Show a window that lets you set your desktop background's pattern or color"
+msgid ""
+"Show a window that lets you set your desktop background's pattern or color"
 msgstr "Masaüstü arkaplanı rengi ya da desenini ayarlayacak pencere aç"
 
 # src/file-manager/nautilus-desktop-icon-view-ui.xml.h:9
@@ -5308,7 +5357,8 @@ msgid "Mount the selected volume"
 msgstr "Seçilen sistemi bağla"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:25
-msgid "Move or copy files previously selected by a Cut Files or Copy Files command"
+msgid ""
+"Move or copy files previously selected by a Cut Files or Copy Files command"
 msgstr ""
 "Daha önce Dosyaları Kes ya da Dosyaları Kopyala komutu yardımıyla seçilen "
 "dosyaları taşı ya da kopyala"
@@ -5719,6 +5769,7 @@ msgstr ""
 #. * current OAF. I guess I read the code wrong. Need to figure out when and make a
 #. * good message.
 #.
+#. FIXME bugzilla.gnome.org 42538: When can this happen?
 #: src/nautilus-application.c:542 src/nautilus-application.c:560
 #: src/nautilus-application.c:567
 msgid "Nautilus can't be used now, due to an unexpected error."
@@ -6350,11 +6401,13 @@ msgstr "nautilus: %s URI'lerle birlikte kullanılamaz.\n"
 
 # src/nautilus-main.c:209
 #: src/nautilus-main.c:265
+#, c-format
 msgid "nautilus: --check cannot be used with other options.\n"
 msgstr "nautilus: --check diğer seçeneklerle beraber kullanılamaz.\n"
 
 # src/nautilus-main.c:221
 #: src/nautilus-main.c:279
+#, c-format
 msgid "nautilus: --geometry cannot be used with more than one URI.\n"
 msgstr "nautilus: --geometry birden fazla URI ile beraber kullanılamaz.\n"
 
@@ -6387,7 +6440,8 @@ msgstr "%s yan panelinde bir hata oluştu ve devam edemiyor."
 # src/nautilus-window-manage-views.c:903
 #: src/nautilus-navigation-window.c:1075
 msgid "If this keeps happening, you might want to turn this panel off."
-msgstr "Eğer bu hata oluşmaya devam ederse, bu paneli iptal etmek isteyebilirsiniz."
+msgstr ""
+"Eğer bu hata oluşmaya devam ederse, bu paneli iptal etmek isteyebilirsiniz."
 
 # src/nautilus-window-manage-views.c:908
 #: src/nautilus-navigation-window.c:1078
@@ -7399,7 +7453,8 @@ msgstr "Nautilus dosyanın hangi türde olduğunu algılayamadı."
 # src/nautilus-window-manage-views.c:1330
 #: src/nautilus-window-manage-views.c:1370
 msgid "Nautilus has no installed viewer capable of displaying the file."
-msgstr "Nautilus'e dosyayı gösterebilecek yetenekte bir görüntüleyici kurulmamış."
+msgstr ""
+"Nautilus'e dosyayı gösterebilecek yetenekte bir görüntüleyici kurulmamış."
 
 # src/nautilus-window-manage-views.c:1342
 #: src/nautilus-window-manage-views.c:1383
@@ -7429,7 +7484,8 @@ msgstr "Yerel ağda bir SMB sunucusunun çalışıp çalışmadığını kontrol
 msgid ""
 "Searching is unavailable right now, because you either have no index, or the "
 "search service isn't running."
-msgstr "Şu anda arama yapılamaz, çünkü indeksiniz yok, veya arama servisi çalışmıyor."
+msgstr ""
+"Şu anda arama yapılamaz, çünkü indeksiniz yok, veya arama servisi çalışmıyor."
 
 # src/nautilus-window-manage-views.c:1376
 #: src/nautilus-window-manage-views.c:1439
@@ -7533,4 +7589,3 @@ msgstr "Ağ Sunucuları"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Nautilus dosya yöneticisinde ağ sunucularını görüntüle"
-
