--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,9 @@
-This is nautilus 2.7.92, the file manager for the Gnome 2 desktop.
+This is nautilus 2.8.0, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.7.92 are:
+* Destroy metadata hashtable in right way, fixes crash
+* Fix crash in list view when changing views
+* Translation updates
 
 Major changes since 2.7.4 are:
 * Fix crash when transfer rate near zero
