--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-09-13  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.8.0 ===
+
+2004-09-13  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for 2.8.0
 
